--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                            <!--Column pairs (email & phone) creates "row"-->
                            <div class="col-12 col-md-6 form-group">
                              <label for="inputEmail" class="form-label">Email</label> 
-                             <input type="email" class="form-control" name="email"/> 
+                             <input type="email" class="form-control" name="email" required/> 
                            </div>
                            <div class="col-12 col-md-6 form-group">
                             <label for="inputPhone" class="form-label">Phone</label> 
@@ -51,7 +51,7 @@
                            <!--one div spans "row"-->
                            <div class="col-12 form-group">
                             <label for="inputAddress1" class="form-label">Address</label> 
-                             <input type="text" class="form-control" name="address"/> 
+                             <input type="text" class="form-control" name="address" required/> 
                            </div>
                            <div class="col-12 form-group">
                             <label for="inputAddress2" class="form-label">Address 2</label> 
@@ -59,12 +59,13 @@
                            </div>
                            <div class="col-12 col-md-4 form-group">
                             <label for="inputCity" class="form-label">City</label> 
-                            <input type="text" class="form-control" name="city"/> 
+                            <input type="text" class="form-control" name="city" required/> 
                           </div>
+                          <!--STATES drop down-->
                          <div class="col-12 col-md-4 form-group">
                              <label for="state" class="form-label">State</label>
                              <select class="form-select" name="State" required>
-                                <option value="">Choose...</option>
+                                <option selected value="">Choose...</option>
                                 <option value="AL">Alabama</option>
                                 <option value="AK">Alaska</option>
                                 <option value="AZ">Arizona</option>
@@ -121,7 +122,7 @@
                            </div>
                            <div class="col-12 col-md-4 form-group">
                             <label for="inputCity" class="form-label">Zip</label> 
-                            <input type="text" class="form-control" name="zip"/> 
+                            <input type="text" class="form-control" name="zip" required/> 
                           </div>
                            <div class="col-12 form-group">
                                <div class="form-check form-check-inline">
